--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <p>domrasofjnsda</p>
+    <!-- Second Half Of Page -->
+    <section class="popularFood">
+        <artile class="title">
+            <h2>Popular Food</h2>
+        </artile>
+        <article class="content">
+            <div class="container-grid">
+
+                <div> </div>
+                <div> </div>
+                <div> </div>
+                <div> </div>
+                <div> </div>
+                <div> </div>
+                <div> </div>
+                <div> </div>
+
+            </div>
+        </article>
+
+    </section>
+
+    <section class="'reviews">
+        <article class="title">
+            <h2>What Users Say About Us</h2>
+        </article>
+        <article class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla orci
+                !augue, bibendum id risus in, tristique dictum urna. In imperdiet enim
+                ullamcorper aliquam porta. Duis ultricies metus posuere consequal
+                tempus</p>
+            <button>Order Now</button>
+        </article>
+
+
+    </section>
 </body>
+<script src="./assets/script.js"></script>
+
 </html>
