--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+
     <div class="container">
         <header>
             <nav>
@@ -88,7 +89,7 @@
             </article>
         
         </section>
-    
+                    <img src="./Images/escape.png" class="escImg">
                     <div class="fullscreen">
                             <a class="source" href="" target="_blank">Source</a>
                             <a class="youtube" href="" target="_blank"> HelpFull Youtube Video</a>
@@ -101,10 +102,13 @@
                             </ul>
                         </div>
                         <div>
-
-                            <h2>Recipe</h2>
-                            <p class="instruct"></p>
-
+                                <span class="recipeSpan">
+                                    <h2>Recipe</h2>
+                                    <img src="./Images/fullS.png">
+                                </span>
+                            <p class="instruct">
+                            </p>
+                            <div class="instruct instructFull"></div>
                             <ul class="measure">
 
                             </ul>
@@ -117,8 +121,7 @@
             <a href="#" target="_blank" class="fa fa-facebook"></a>
             <a href="#" target="_blank" class="fa fa-twitter"></a>
             <a href="#" target="_blank" class="fa fa-instagram"></a>
-            <br>
-            <br>
+
         </div>
 
         <div class="footer-bottom">
