search_navbar-link

--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 
 <body>
 
-        <!-- Header Image, Nav Buttons & Search bar  -->
+    <!-- Header Image, Nav Buttons & Search bar  -->
     <img src="Main-photo.png" alt="Main Photo">
     <div class="container">
 
         <header>
-        <div class="navbutton">
-            <a href="#">Home</a>
-        </div>
+            <div class="navbutton">
+                <a href="#">Home</a>
+            </div>
 
-        <div class="navbutton">
-            <a href="contact-us.html">About Us</a>
-        </div>
+            <div class="navbutton">
+                <a href="contact-us.html">About Us</a>
+            </div>
 
-        <div class="navbutton">
-            <a href="contact-us.html">Search Food</a>
-        </div>
-    </header>
+            <div class="navbutton">
+                <a href="index_search.html">Search Food</a>
+            </div>
+        </header>
 
     </div>
 
 
 
-        <!-- Main Section -->
+    <!-- Main Section -->
 
     <main>
         <div class="herobox1">
@@ -138,7 +138,7 @@
         </div>
     </div>
 
-        <!-- Testimonial Sec -->
+    <!-- Testimonial Sec -->
 
     <div class="reviews">
         <h2>A few words from our clients</h2>
@@ -177,25 +177,25 @@
         </div>
     </div>
 
-            <!-- Footer Sec -->
+    <!-- Footer Sec -->
 
 
-        <footer>
-            <h4 id="footer-heading">FOLLOW ME</h4>
-            <div class="footer-social">
-                <a href="#" target="_blank" class="fa fa-facebook"></a>
-                <a href="#" target="_blank" class="fa fa-twitter"></a>
-                <a href="#" target="_blank" class="fa fa-instagram"></a>
-                <br>
-                <br>
-            </div>
+    <footer>
+        <h4 id="footer-heading">FOLLOW ME</h4>
+        <div class="footer-social">
+            <a href="#" target="_blank" class="fa fa-facebook"></a>
+            <a href="#" target="_blank" class="fa fa-twitter"></a>
+            <a href="#" target="_blank" class="fa fa-instagram"></a>
+            <br>
+            <br>
+        </div>
 
-            <div class="footer-bottom">
-                All rights reserved - Copyright 2023©
+        <div class="footer-bottom">
+            All rights reserved - Copyright 2023©
 
-            </div>
+        </div>
 
-        </footer>
+    </footer>
 
 
 
