--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
         <!-- Header Image, Nav Buttons & Search bar  -->
-    <img src="Main-photo.png" alt="Main Photo">
+    <img src="Main-photo.png" alt="Main Photo" class="basitImage">
     <div class="container">
 
         <header>
@@ -125,9 +125,9 @@
             </ul>
         </div>
         <div>
-            <span class="recipeSpan">
+            <span id="recipeSpan">
                 <h2>Recipe</h2>
-                <img src="./Images/fullS.png">
+                <img src="./images/fullS.png">
             </span>
             <p class="instruct">
             </p>
