--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Sharing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="/assets/aboutus.css">
+    <link rel="stylesheet" href="/assets/search-style.css">
 </head>
 
 <body>
-
-
-
         <!-- Header Image, Nav Buttons & Search bar  -->
-    <img src="Main-photo.png" alt="Main Photo" class="basitImage">
 
     <div class="container">
-
         <header>
             <div class="navbutton">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
             </div>
 
             <div class="navbutton">
-                <a href="contact-us.html">About Us</a>
+                <a href="aboutus.html">About Us</a>
             </div>
 
             <div class="navbutton">
-                <a href="index_search.html">Search Food</a>
+                <a href="index-search.html">Search Food</a>
             </div>
         </header>
 
     </div>
+
+        <div class="basitImage">
+    <img src="./images/Main-photo.png" alt="Main Photo">
+        </div>
 
 
 
@@ -138,7 +139,7 @@
     <div class="reviews">
         <h2>A few words from our clients</h2>
         <div class="testimonial-photo-section">
-            <img src="Expert-photo.png" alt="Review Photo">
+            <img src="./images/Expert-photo.png" alt="Review Photo">
         </div>
 
         <div class="testimonial-text-section">
@@ -176,7 +177,7 @@
 
 
     <footer>
-        <h4 id="footer-heading">FOLLOW ME</h4>
+        <h4 id="footer-heading">FOLLOW US</h4>
         <div class="footer-social">
             <a href="#" target="_blank" class="fa fa-facebook"></a>
             <a href="#" target="_blank" class="fa fa-twitter"></a>
