--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 
 
 
-        <!-- Header Image, Nav Buttons & Search bar  -->
-    <img src="Main-photo.png" alt="Main Photo" class="basitImage">
+    <!-- Header Image, Nav Buttons & Search bar  -->
+
+
 
     <div class="container">
-
+            <div class="imageHolder">
+                <img src="Main-photo.png" alt="Main Photo" class="basitImage">
+            </div>
         <header>
             <div class="navbutton">
                 <a href="#">Home</a>
@@ -32,7 +35,6 @@
                 <a href="index_search.html">Search Food</a>
             </div>
         </header>
-
     </div>
 
 
@@ -48,28 +50,35 @@
                 Your ultimate destination for a world of delectable recipes! Whether you're a seasoned chef or a
                 culinary enthusiast looking to embark on a gastronomic adventure, our website is here to tantalize your
                 taste buds and inspire your culinary creations.
-                <br><br>
+            </p>
+            <p>
                 At Recipe Sharing, we believe that cooking is an art that knows no bounds. Our curated collection of
                 recipes spans a diverse range of cuisines, from mouthwatering appetizers to sumptuous main courses, and
                 from delightful desserts to refreshing beverages. No matter what your craving is – be it the comforting
                 embrace of classic comfort food, the bold flavors of international dishes, or the innovative twists that
                 elevate everyday ingredients – we've got you covered.
-                <br><br>
+            </p>
+
+                <p>
                 Our mission is to be your trusted companion in the kitchen. Our team of passionate food aficionados has
                 meticulously crafted and tested each recipe to ensure that they are not only easy to follow but also
                 yield spectacular results. Whether you're hosting a dinner party, preparing a family feast, or simply
                 indulging in some culinary experimentation, you'll find a recipe that suits every occasion and skill
                 level.
-                <br><br>
-                Join us on a culinary journey that celebrates the joy of cooking and sharing. Explore our treasure trove
-                of recipes, cooking tips, and techniques that will empower you to create culinary masterpieces that
-                leave a lasting impression. From novice cooks to seasoned pros, everyone is invited to savor the world
-                of flavors that [Your Website Name] brings to your kitchen.
+                </p>
+
+               <p>
+                                Join us on a culinary journey that celebrates the joy of cooking and sharing. Explore our treasure trove
+                                of recipes, cooking tips, and techniques that will empower you to create culinary masterpieces that
+                                leave a lasting impression. From novice cooks to seasoned pros, everyone is invited to savor the world
+                                of flavors that [Your Website Name] brings to your kitchen.
+               </p>
+
             </p>
         </div>
     </main>
 
-  
+
 
     <section class="popularFood">
         <artile class="title">
