--- a/index.html
+++ b/index.html
@@ -20,33 +20,24 @@
 
 
 
-    <div class="container">
-            <div class="imageHolder">
-                <img src="Main-photo.png" alt="Main Photo" class="basitImage">
-            </div>
 
-    <!-- Header Image, Nav Buttons & Search bar  -->
-
-    <div class="container">
-
-        <header>
-            <div class="navbutton">
-                <a href="index.html">Home</a>
-            </div>
-
-            <div class="navbutton">
-                <a href="aboutus.html">About Us</a>
-            </div>
-
-            <div class="navbutton">
-                <a href="index-search.html">Search Food</a>
-            </div>
-        </header>
+<div class="container">
+    <div class="imageHolder">
+        <img src="./images/Main-photo.png" alt="Main Photo" class="basitImage">
     </div>
+    <header>
+        <div class="navbutton">
+            <a href="#">Home</a>
+        </div>
+        <div class="navbutton">
+            <a href="contact-us.html">About Us</a>
+        </div>
+        <div class="navbutton">
+            <a href="index_search.html">Search Food</a>
+        </div>
+    </header>
+</div>
 
-    <div class="basitImage">
-        <img src="./images/Main-photo.png" alt="Main Photo">
-    </div>
 
 
 
